OSSM/1_34/must-gather.local.2392184673243315730/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-88edd13801b2ba7aa4bc7c344e18992e2ebd100cc49e959b315bb7e8c8d20298/cluster-scoped-resources/admissionregistration.k8s.io/mutatingwebhookconfigurations/smcp.mutation.maistra.io-gbn6g.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: "2025-01-09T14:45:00Z"
  generateName: smcp.mutation.maistra.io-
  generation: 1
  labels:
    olm.managed: "true"
    olm.owner: servicemeshoperator.v2.6.4
    olm.owner.kind: ClusterServiceVersion
    olm.owner.namespace: openshift-operators
    olm.webhook-description-generate-name: smcp.mutation.maistra.io
    olm.webhook-description-hash: bvQENVTTawMG89Ouj2CewZhKC04vRs5Ue9OBEu
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:generateName: {}
        f:labels:
          .: {}
          f:olm.managed: {}
          f:olm.owner: {}
          f:olm.owner.kind: {}
          f:olm.owner.namespace: {}
          f:olm.webhook-description-generate-name: {}
          f:olm.webhook-description-hash: {}
      f:webhooks:
        .: {}
        k:{"name":"smcp.mutation.maistra.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:reinvocationPolicy: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: olm
    operation: Update
    time: "2025-01-09T14:45:00Z"
  name: smcp.mutation.maistra.io-gbn6g
  resourceVersion: "40915"
  uid: 4ea83c72-cca4-4869-bc3c-9a1ebf6e2ccc
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJ1akNDQVdDZ0F3SUJBZ0lJQ2svalQ4bE54UFV3Q2dZSUtvWkl6ajBFQXdJd1FURVdNQlFHQTFVRUNoTU4KVW1Wa0lFaGhkQ3dnU1c1akxqRW5NQ1VHQTFVRUF4TWViMnh0TFhObGJHWnphV2R1WldRdFlUUm1aVE0wWm1NNQpOR1JqTkdZMU1CNFhEVEkxTURFd09URTBORFV3TUZvWERUSTNNREV3T1RFME5EVXdNRm93UVRFV01CUUdBMVVFCkNoTU5VbVZrSUVoaGRDd2dTVzVqTGpFbk1DVUdBMVVFQXhNZWIyeHRMWE5sYkdaemFXZHVaV1F0WVRSbVpUTTAKWm1NNU5HUmpOR1kxTUZrd0V3WUhLb1pJemowQ0FRWUlLb1pJemowREFRY0RRZ0FFQUwwS0dYVUhEa2ZXeEJ3dgpnRVRjOVlrU1RYMG [...]
    service:
      name: istio-operator-service
      namespace: openshift-operators
      path: /mutate-smcp
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: smcp.mutation.maistra.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - maistra.io
    apiVersions:
    - v1
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - servicemeshcontrolplanes
    scope: '*'
  sideEffects: NoneOnDryRun
  timeoutSeconds: 10
